# mem-constant

./: .gitignore  AGENTS.md  AI_GROUPCHAT.md  LICENSE  README.md  agent-workflow-fold-plan.md  phase3_migrate_skills.py  pyproject.toml
docs/: BUILD-PHILOSOPHY.md  CLI.md  CONFIGURATION.md  INSTALL.md  INTEGRATION-CLAUDE-CODE.md  INTEGRATION-CLAUDE-MEM.md  INTEGRATION-GRAPHIFY.md  INTEGRATION-MEMPALACE.md  INTEGRATION-VSCODE.md  PACKAGING.md  WORKFLOW-SKILLS.md
docs/memory/: README.md  global-handoff-template.md  graph-ontology-and-customization.md  operations-runbook.md  pruning-and-gc-policy.md  routing-policy.md  validation-plan.md
docs/remote-pc-setup/: README.md  REPO-LOCATION.txt  START-HERE.txt  config.example.psd1
scripts/: vendor_specs.py
scripts/remote-stream-companion/: Connect-RemotePC.ps1  Connect-RustDesk.ps1  Open-ApolloWebUI.ps1  README.md  RemoteStreamCommon.ps1  config.example.psd1
src/mem_constant/: __init__.py  carryover.py  cli.py  init_scaffold.py
src/mem_constant/spec/: README.md  __init__.py  autonomous-memory-architecture.md  daily-standup-spec.md  memory-schema-and-scoring.md  pruning-and-gc-policy.md
src/mem_constant/templates/: __init__.py  claude-mem-constant.md  cursor-mem-constant.mdc  vscode-copilot-instructions.md
src/mem_constant/templates/hooks/: mem_constant_carryover_hooks.py
src/mem_constant/templates/workflow-skills/advanced-elicitation/: SKILL.md
src/mem_constant/templates/workflow-skills/agent-architect/: SKILL.md  skill-manifest.yaml
tests/: test_carryover_hooks_integration.py  test_cli.py
(+65 files in other folders)
