[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mem-constant"
version = "0.2.2"
description = "Autonomous memory design package: MemPalace + working cache, with an easy scaffold CLI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "kineticdirt" }]
keywords = ["memory", "mempalace", "cursor", "agents", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/kineticdirt/mem-constant"
Documentation = "https://github.com/kineticdirt/mem-constant#readme"
Repository = "https://github.com/kineticdirt/mem-constant"

[project.scripts]
mem-constant = "mem_constant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mem_constant = ["spec/*.md", "templates/*.mdc", "templates/hooks/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
